# f5-ru-api

./: .env  Dockerfile  README.md  f5.py  main.py  pyproject.toml  ui.py
.github/workflows/: ci.yml
api/: main.py
models/: generation.py  model.py  voice.py
tests/: concurrency_test.py  out.pcm  test_openai_stream.py
tts/: config.py  engine.py
voices/: VOICES.md
voices/alloy/: ref.txt
