[project]
name = "t5-tts"
version = "0.1.0"
description = "t5 tts model inference engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.8.0",
  "torchvision==0.23.0",
  "torchaudio==2.8.0",
  "ruaccent==1.5.8.3",
  "f5-tts==1.1.7",
  "huggingface_hub==0.34.4",
  "pillow==11.3.0",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "soundfile==0.13.1",
  "numpy==1.26.4",
  "pydantic-settings>=2.10.1",
  "openai>=1.101.0",
]


[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
