[project]
name = "ru-t5-tts"
version = "0.1.1"
description = "t5 russian tts model inference engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch==2.9.0",
  "torchvision",
  "torchaudio==2.9.0",
  "torchcodec",
  "ruaccent==1.5.8.3",
  "f5-tts==1.1.7",
  "huggingface_hub[hf_xet]",
  "pillow==11.3.0",
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "soundfile==0.13.1",
  "numpy==1.26.4",
  "pydantic-settings>=2.10.1",
  "openai>=1.101.0",
]


[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchcodec = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
